database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-database
spec:
  selector:
    app: counter-database
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
